apps/downloaders/sabnzbd/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  labels:
    app.kubernetes.io/name: downloaders
    app.kubernetes.io/component: sabnzbd
    app.kubernetes.io/part-of: media
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: downloaders
      app.kubernetes.io/component: sabnzbd
      app.kubernetes.io/part-of: media
  template:
    metadata:
      labels:
        app.kubernetes.io/name: downloaders
        app.kubernetes.io/component: sabnzbd
        app.kubernetes.io/part-of: media
    spec:
      securityContext:
        runAsGroup: 1000
        runAsUser: 1000
        fsGroup: 1000
        runAsNonRoot: true
      containers:
      - name: sabnzbd
        image: lscr.io/linuxserver/sabnzbd:latest
        ports:
        - containerPort: 8080
          name: http
        startupProbe:
          httpGet:
            port: http
            path: /sabnzbd/login/
          initialDelaySeconds: 10
          periodSeconds: 3
        livenessProbe:
          httpGet:
            port: http
            path: /sabnzbd/login/
          periodSeconds: 60
        readinessProbe:
          httpGet:
            port: http
            path: /sabnzbd/login/
          periodSeconds: 60
        securityContext:
          readOnlyRootFilesystem: true
        volumeMounts:
        - name: run
          mountPath: /run
        - name: tmp
          mountPath: /tmp
        - name: config
          mountPath: /config
          readOnly: false
        - name: media-library
          mountPath: /media
          readOnly: false
        resources:
          requests:
            memory: 3072Mi
            cpu: 750m
          limits:
            memory: 3584Mi
            cpu: 2500m
      volumes:
      - name: run
        emptyDir:
          medium: Memory
      - name: tmp
        emptyDir: {}
      - name: config
        persistentVolumeClaim:
          claimName: sabnzbd-config
      - name: media-library
        persistentVolumeClaim:
          claimName: media-library
