apps/downloaders/sabnzbd/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
spec:
  selector:
    app.kubernetes.io/name: downloaders
    app.kubernetes.io/component: sabnzbd
    app.kubernetes.io/part-of: media
  ports:
  - port: 8080
    targetPort: 8080
    name: http
